about/about.css
body{
    background-color: #ecccff;
    padding:50px;
}

h1{
    text-align: center;
}

.pic, .text{
    height: max(160px, 13vw);
    /* border: 1px solid red; */
    max-width: max(400px, 60vw);
    margin: 0 auto;
    position: relative;
    top: 0;
    left: 0;
    text-align: center;
    /* text-align: center; */
}

.pic{
    background-position: center;
    background-size: cover;
    border-radius: 10px;
}

#me{
    position: relative;
    object-fit: cover;
    height: 100px;
    width:100px;
    top: -100%;
    border-radius:70px;
    border:5px solid #32452f;
}

.prof{
    /* display:flex; */ /* text-align: center; in .text will center the pic. if you take that out, this will also center the pic */
    height: 50px;
    text-align: center;
    /* border: 1px solid black; */
}

.form{
    display: none;
}

